envoy/dynamic/envoy.yaml
node:
    id: id_1
    cluster: test
  
  admin:
    access_log_path: "/dev/null"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9901
        
  static_resources:
    listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          config:
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: backend
                domains:
                  - "*"
                routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: targetCluster
            http_filters:
            - name: envoy.router
    clusters:
    - name: targetCluster
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      type: EDS
      eds_cluster_config:
        service_name: localservices
        eds_config:
          path: '/etc/envoy/eds.conf'
